[package]
name = "ogit"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.16", features = ["cargo", "derive"] }
color-hex = "0.2.0"
colored = "2.1.0"
config-file = "0.2.3"
csscolorparser = "0.7.0"
human-panic = "2.0.1"
ini = "1.3.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
